     * changed recall to show recall list even when gold < 20
     * added advancement and AMLA indicator icons, tooltips to dfool theme
     * allow pausing during replay
     * SECURITY: check safety of campaign download names: if any unsafe
       names are found, install is aborted before old version is removed
     * hitpoint update delays are now capped at 1 second (#4070)
 * graphics
   * new title screen and logo
   * changed the storm trident attack icon from fireball to lightingbolt
   * new attack icon for the fireball
   * portraits:
     * new portraits: Li'sar, Drake Burner, Drake Fighter, Drake Glider, 
       Elvish Shaman, Ghoul, Mermaid Initiate, Merman Fighter, Merman Hunter, 
       Naga Fighter, Orcish Assassin, Saurian Skirmisher
     * all Drake, Merman, Naga and Saurian upgrades now use level one portraits
     * Necrophage and Orcish Slayer upgrades now use level one portraits
   * new images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep
   * removed deprecated death animation: Drake Fighter
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
   * new villages: snow (human & elven), underground
   * Updated snow hills and hills
 * language and i18n:
   * added support for right-to-left languages (patch #470)
   * made the list of languages configurable via the locale WML
   * updated manual: English, German, Swedish
   * updated man pages: Swedish
   * new translations: Hebrew, Portugese
   * updated translations: Afrikaans, British English, Chinese, French, German,
     Hungarian, Italian, Japanese, Polish, Portuguese (Brazil), Russian, Slovak,
     Slovenian, Spanish, Swedish, Turkish
   * tutorial now has its own textdomain
   * fixed Undead used as both trait and race name (#4295)
   * fixed textdomains in text savegames (non-binary) displaying all messages
     in English when loading saved games (#4454)